fix and cleanup V8 Makefile

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -6,17 +6,10 @@
 
 include $(POCO_BASE)/build/rules/global
 
+.PHONY: v8deps
+
 V8VERSION = 6.1.534
 V8BASE = v8
-
-# tools/gyp/gyp -Dcomponent=shared_library -Dlibrary=shared -Dv8_use_snapshot="'false'"
-#   -Dlinux_use_bundled_binutils=0 -Dlinux_use_bundled_gold=0 -Dlinux_use_gold_flags=0
-#    -Dhost_os=linux -Dv8_enable_backtrace=0 -Ddcheck_always_on=0
-#    -Dv8_enable_handle_zapping=0 -Dv8_enable_slow_dchecks=0 -Dv8_enable_inspector=0
-#    -Dv8_enable_gdbjit=0 -Dwerror='' -Dhost_arch=x64 -Dv8_target_arch=x64 -Dtarget_arch=x64
-#    -Dtest_isolation_mode=noop -Dv8_optimized_debug=0 -Dv8_enable_i18n_support=0
-#    -Dwant_separate_host_toolset=0 -Dv8_use_external_startup_data=0 -Dv8_random_seed=0
-#    --generator-output=`pwd`/out -Goutput_dir=`pwd`/out -f make -Icommon.gypi --depth=. v8/src/v8.gyp
 
 GYPFLAGS = -Dcomponent=shared_library -Dlinux_use_bundled_binutils=0 \
 	-Dlinux_use_bundled_gold=0 -Dlinux_use_gold_flags=0 -Dv8_enable_backtrace=0 -Ddcheck_always_on=0 \
@@ -30,12 +23,6 @@ GYPFLAGS += -Dv8_use_snapshot=true
 else
 GYPFLAGS += -Dv8_use_snapshot=false
 endif
-
-export CFLAGS
-export CXXFLAGS
-export LINKFLAGS
-
-.PHONY: v8base v8deps
 
 ifeq ($(OSARCH),x86_64)
 V8ARCH = x64
@@ -79,7 +66,6 @@ $(error Unknown target architecture)
 endif
 ifeq ($(findstring clang,$(CXX)),clang)
 GYPFLAGS += -Dclang=1
-CXX += -Wno-unknown-warning-option
 endif
 
 # Reduce linker memory usage on ARM systems
@@ -95,17 +81,11 @@ v8deps: out/Makefile
 out/Makefile:
 	 tools/gyp/gyp $(GYPFLAGS) --generator-output=$(POCO_BASE)/JS/V8/out -Goutput_dir=$(POCO_BASE)/JS/V8/out -f make -Icommon.gypi --depth=. v8/src/v8.gyp
 
-# shared_debug: v8deps
-# 	-$(MAKE) -C out BUILDTYPE=Debug NO_LOAD="v8/src/v8_external_snapshot v8/src/v8_snapshot"
-#
-# shared_release: v8deps
-#	-$(MAKE) -C out BUILDTYPE=Release NO_LOAD="v8/src/v8_external_snapshot v8/src/v8_snapshot"
-
 shared_debug: v8deps
-	-$(MAKE) -C out BUILDTYPE=Debug v8 v8_libplatform
+	$(MAKE) -C out BUILDTYPE=Debug CFLAGS="$(CFLAGS) $(SHAREDOPT_CC)" CXXFLAGS="$(CXXFLAGS) $(SHAREDOPT_CXX)" v8 v8_libplatform
 
 shared_release: v8deps
-	-$(MAKE) -C out BUILDTYPE=Release v8 v8_libplatform
+	$(MAKE) -C out BUILDTYPE=Release CFLAGS="$(CFLAGS) $(SHAREDOPT_CC)" CXXFLAGS="$(CXXFLAGS) $(SHAREDOPT_CXX)" v8 v8_libplatform
 
 all_shared: shared_debug shared_release
 
