--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
       compiler: gcc
       language: cpp
       script:
+        - sudo apt-get install -qq -y gcc-4.9 g++-4.9
+        - export CC="gcc-4.9"
+        - export CXX="g++-4.9 -std=c++11"
+        - $CXX --version
         - make -s -j2 DEFAULT_TARGET=shared_release
 
     - env:    TEST_NAME="arm-linux-gnueabihf-gcc (target)"
