--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,10 @@ matrix:
       script:
         - curl https://macchina.io/files/travis/ti-am335x-sdk.tgz >ti-am335x-sdk.tgz
         - tar xfz ti-am335x-sdk.tgz
+        - export PATH=$PATH:`pwd`/ti-am335x-sdk/linux-devkit/sysroots/i686-arago-linux/usr/bin
+        - arm-linux-gnueabihf --version
         - make -s -j2 hosttools DEFAULT_TARGET=shared_release
-        - export PATH=$PATH:`pwd`/ti-am335x-sdk/linux-devkit/sysroots/i686-arago-linux/usr/bin; POCO_CONFIG=Arago make -s -j2 DEFAULT_TARGET=shared_release
+        - POCO_CONFIG=Arago make -s -j2 DEFAULT_TARGET=shared_release
 
     # QA jobs for code analytics and metrics
     # static code analysis with cppcheck (we can add --enable=all later)
