--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
         - curl https://macchina.io/files/travis/ti-am335x-sdk.tgz >ti-am335x-sdk.tgz
         - tar xfz ti-am335x-sdk.tgz
         - export PATH=$PATH:`pwd`/ti-am335x-sdk/linux-devkit/sysroots/i686-arago-linux/usr/bin
-        - arm-linux-gnueabihf --version
+        - arm-linux-gnueabihf-g++ --version
         - make -s -j2 hosttools DEFAULT_TARGET=shared_release
         - POCO_CONFIG=Arago make -s -j2 DEFAULT_TARGET=shared_release
 
