libv8: always use release build unless a debug build is specifically requested. Don't try to fake libv8d.so by renaming debug libv8.so, which does not work due to embedded soname.

--- a/platform/JS/Data/Makefile
+++ b/platform/JS/Data/Makefile
@@ -12,6 +12,7 @@ objects = SessionWrapper RecordSetWrapper
 
 target         = PocoJSData
 target_version = 1
-target_libs    = PocoJSCore PocoData PocoFoundation v8
+target_libs    = PocoJSCore PocoData PocoFoundation
+ext_libs       = v8 v8_libplatform v8_libbase
 
 include $(POCO_BASE)/build/rules/lib
