--- a/platform/JS/Bridge/Makefile
+++ b/platform/JS/Bridge/Makefile
@@ -14,6 +14,7 @@ objects = Serializer Deserializer Listener \
 
 target         = PocoJSBridge
 target_version = 1
-target_libs    = PocoJSCore PocoRemotingNG PocoUtil PocoXML PocoFoundation v8
+target_libs    = PocoJSCore PocoRemotingNG PocoUtil PocoXML PocoFoundation
+ext_libs       = v8 v8_libplatform v8_libbase
 
 include $(POCO_BASE)/build/rules/lib
