--- a/platform/JS/Core/Makefile
+++ b/platform/JS/Core/Makefile
@@ -15,6 +15,7 @@ objects = Wrapper PooledIsolate \
 
 target         = PocoJSCore
 target_version = 1
-target_libs    = PocoUtil PocoJSON PocoXML PocoFoundation v8 v8_libplatform v8_libbase
+target_libs    = PocoUtil PocoJSON PocoXML PocoFoundation
+ext_libs       = v8 v8_libplatform v8_libbase
 
 include $(POCO_BASE)/build/rules/lib
