--- a/.travis.yml
+++ b/.travis.yml
@@ -26,16 +26,14 @@ matrix:
         - $CXX --version
         - make -s -j2 DEFAULT_TARGET=shared_release
 
-    - env:    TEST_NAME="arm-linux-gnueabihf-gcc (target)"
+    - env:    TEST_NAME="arm-linux-gnueabi-gcc (target)"
       compiler: gcc
       language: cpp
       script:
-        - curl https://macchina.io/files/travis/ti-am335x-sdk.tgz >ti-am335x-sdk.tgz
-        - tar xfz ti-am335x-sdk.tgz
-        - export PATH=$PATH:`pwd`/ti-am335x-sdk/linux-devkit/sysroots/i686-arago-linux/usr/bin
+        - sudo apt-get install -qq -y g++-arm-linux-gnueabihf
         - arm-linux-gnueabihf-g++ --version
         - make -s -j2 hosttools DEFAULT_TARGET=shared_release
-        - POCO_CONFIG=Arago make -s -j2 DEFAULT_TARGET=shared_release
+        - POCO_CONFIG=ARM-Linux make -s -j2 DEFAULT_TARGET=shared_release TOOL=arm-linux-gnueabihf
 
     # QA jobs for code analytics and metrics
     # static code analysis with cppcheck (we can add --enable=all later)
