--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,15 @@ matrix:
         - $CXX --version
         - make -s -j2 DEFAULT_TARGET=shared_release
 
-    - env:    TEST_NAME="arm-linux-gnueabi-gcc (target)"
-      compiler: gcc
-      language: cpp
-      script:
-        - sudo apt-get install -qq -y g++-arm-linux-gnueabihf
-        - arm-linux-gnueabihf-g++ --version
-        - make -s -j2 hosttools DEFAULT_TARGET=shared_release
-        - POCO_CONFIG=ARM-Linux make -s -j2 DEFAULT_TARGET=shared_release TOOL=arm-linux-gnueabihf
+# ARM build disabled until we get GCC 4.9 cross compiler
+#    - env:    TEST_NAME="arm-linux-gnueabi-gcc (target)"
+#      compiler: gcc
+#      language: cpp
+#      script:
+#        - sudo apt-get install -qq -y g++-arm-linux-gnueabihf
+#        - arm-linux-gnueabihf-g++ --version
+#        - make -s -j2 hosttools DEFAULT_TARGET=shared_release
+#        - POCO_CONFIG=ARM-Linux make -s -j2 DEFAULT_TARGET=shared_release TOOL=arm-linux-gnueabihf
 
     # QA jobs for code analytics and metrics
     # static code analysis with cppcheck (we can add --enable=all later)
