Fix review finding, clean cmake files and add launcher build

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -7,6 +7,16 @@
 # ENABLE_TESTS
 # ENABLE_SAMPLES
 
+set(ENABLE_MONGODB OFF CACHE BOOL "Enable MongoDB" FORCE)
+set(ENABLE_PDF OFF  CACHE BOOL  "Enable PDF" FORCE)
+set(ENABLE_DATA_MYSQL OFF  CACHE BOOL  "Enable Data MySQL" FORCE)
+set(ENABLE_DATA_POSTGRESQL OFF  CACHE BOOL "Enable Data PosgreSQL" FORCE)
+set(ENABLE_DATA_ODBC OFF  CACHE BOOL "Enable Data ODBC" FORCE)
+set(ENABLE_SEVENZIP OFF  CACHE BOOL "Enable SevenZip" FORCE)
+set(ENABLE_APACHECONNECTOR OFF  CACHE BOOL "Enable ApacheConnector" FORCE)
+set(ENABLE_CPPPARSER OFF  CACHE BOOL "Enable C++ parser" FORCE)
+set(ENABLE_POCODOC OFF  CACHE BOOL "Enable Poco Documentation Generator" FORCE)
+
 cmake_minimum_required(VERSION 3.2.0)
 
 project(Poco)
