--- a/platform/OSP/Core/CMakeLists.txt
+++ b/platform/OSP/Core/CMakeLists.txt
@@ -1,7 +1,9 @@
 
-find_package(macchina.ioOSP)
+find_package(MacchinaOSP)
 
-add_library(osp.core SHARED src/CoreBundleActivator.cpp)
+add_library(osp.core SHARED 
+    src/CoreBundleActivator.cpp
+)
 target_link_libraries(osp.core PocoOSP PocoUtil PocoXML PocoFoundation)
- 
+
 create_bundle(TARGET osp.core SPEC_FILE Core.bndlspec)
