--- a/platform/OSP/BundleCreator/CMakeLists.txt
+++ b/platform/OSP/BundleCreator/CMakeLists.txt
@@ -1,16 +1,6 @@
-set(POCO_EXENAME "bundle")
 
-# Sources
-file(GLOB SRCS_G "src/*.cpp")
-POCO_SOURCES_AUTO( SRCS ${SRCS_G})
-
-add_executable( "${POCO_EXENAME}" ${SRCS} )
-target_link_libraries( "${POCO_EXENAME}" PocoFoundation PocoXML PocoUtil PocoOSP PocoZip)
-
-install(
-    TARGETS "${POCO_EXENAME}" EXPORT "${POCO_EXENAME}Targets"
-    LIBRARY DESTINATION lib${LIB_SUFFIX}
-    ARCHIVE DESTINATION lib${LIB_SUFFIX}
-    RUNTIME DESTINATION bin
-    INCLUDES DESTINATION include
-    )
+add_executable(bundle 
+    src/BundleCreator.cpp 
+    src/ManifestInfo.cpp
+)
+target_link_libraries(bundle PocoFoundation PocoXML PocoUtil PocoOSP PocoZip)
