--- a/platform/WebTunnel/CMakeLists.txt
+++ b/platform/WebTunnel/CMakeLists.txt
@@ -1,35 +1,19 @@
-#  
-# objects = LocalPortForwarder RemotePortForwarder PortReflector \
-# 	TunnelSocket TunnelSocketImpl \
-# 	SocketDispatcher Protocol
-# 
-# target         = PocoWebTunnel
-# target_version = 1
-# target_libs    = PocoNet PocoFoundation
-#
 
-set(LIBNAME "WebTunnel")
-set(POCO_LIBNAME "Poco${LIBNAME}")
+add_library(PocoWebTunnel 
+    src/RemotePortForwarder.cpp
+    src/PortReflector.cpp
+    src/TunnelSocket.cpp
+    src/Protocol.cpp
+    src/SocketDispatcher.cpp
+    src/LocalPortForwarder.cpp
+    src/TunnelSocketImpl.cpp
+)
 
-# Sources
-file(GLOB SRCS_G "src/*.cpp")
-POCO_SOURCES_AUTO( SRCS ${SRCS_G})
-
-# Headers
-file(GLOB_RECURSE HDRS_G "include/*.h" )
-POCO_HEADERS_AUTO( SRCS ${HDRS_G})
-
-add_library( "${LIBNAME}" ${LIB_MODE} ${SRCS} )
-add_library( "${POCO_LIBNAME}" ALIAS "${LIBNAME}")
-
-target_link_libraries( "${LIBNAME}" Foundation Net )
-target_include_directories( "${LIBNAME}"
+target_link_libraries(PocoWebTunnel Foundation Net )
+target_include_directories(PocoWebTunnel
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
+    PRIVATE 
+       src
     )
-target_compile_definitions("${LIBNAME}" PUBLIC ${LIB_MODE_DEFINITIONS})
-
-POCO_INSTALL("${LIBNAME}")
-POCO_GENERATE_PACKAGE("${LIBNAME}")
