add module support to legacy bundle admin webapp

--- a/platform/OSP/BundleAdmin/bundle/bundle.properties
+++ b/platform/OSP/BundleAdmin/bundle/bundle.properties
@@ -93,7 +93,10 @@ text.runlevel         = Run Level
 text.bundle           = Bundle
 text.copyright        = Copyright
 text.path             = Path
-text.dependencies     = Dependencies
+text.dependencies     = Bundle Dependencies
+text.modules          = Module Dependencies
+text.provided         = Provided Modules
+text.module           = Module
 text.confirmUninstall = Confirm Uninstall
 text.resolveBundle    = Resolve Bundle
 text.startBundle      = Start Bundle
