added JavaScript bindings for ServiceListener

--- a/platform/OSP/JS/Makefile-Library
+++ b/platform/OSP/JS/Makefile-Library
@@ -12,6 +12,7 @@ objects = JSExecutor \
 	JSExtensionPoint \
 	BundleWrapper \
 	ServiceRegistryWrapper \
+	ServiceListenerWrapper \
 	ServiceRefWrapper \
 	ModuleFactory \
 	ModuleExtensionPoint
