build system: rename ext_libs Makefile variable to target_extlibs

--- a/platform/OSP/JS/Data/Makefile
+++ b/platform/OSP/JS/Data/Makefile
@@ -15,7 +15,7 @@ objects = DataModule
 target         = com.appinf.osp.js.data
 target_version = 1
 target_libs    = PocoJSData PocoJSCore PocoOSPJS PocoOSP PocoUtil PocoXML PocoData PocoFoundation
-ext_libs       = v8 v8_libplatform v8_libbase
+target_extlibs = v8 v8_libplatform v8_libbase
 
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles Data.bndlspec
 
