--- a/platform/JS/Net/Makefile
+++ b/platform/JS/Net/Makefile
@@ -13,6 +13,6 @@ objects = HTTPRequestWrapper HTTPResponseWrapper HTMLFormWrapper
 target         = PocoJSNet
 target_version = 1
 target_libs    = PocoJSCore PocoUtil PocoXML PocoNet PocoFoundation
-ext_libs       = v8 v8_libplatform v8_libbase
+target_extlibs = v8 v8_libplatform v8_libbase
 
 include $(POCO_BASE)/build/rules/lib
