--- a/platform/JS/samples/jsrun/Makefile
+++ b/platform/JS/samples/jsrun/Makefile
@@ -11,6 +11,6 @@ objects = jsrun
 target         = jsrun
 target_version = 1
 target_libs    = PocoJSNet PocoJSData PocoJSCore PocoNetSSL PocoCrypto PocoNet PocoDataSQLite PocoData PocoRemotingNG PocoUtil PocoXML PocoJSON PocoFoundation
-ext_libs       = v8 v8_libplatform v8_libbase
+target_extlibs = v8 v8_libplatform v8_libbase
 
 include $(POCO_BASE)/build/rules/exec
