--- a/platform/OSP/JS/Web/Makefile
+++ b/platform/OSP/JS/Web/Makefile
@@ -19,7 +19,7 @@ objects = JSServletExecutor JSServletExecutorCache \
 target         = com.appinf.osp.js.web
 target_version = 1
 target_libs    = PocoOSPJS PocoJSNet PocoJSData PocoJSBridge PocoJSCore PocoOSPWeb PocoOSP PocoRemotingNG PocoNet PocoUtil PocoXML PocoData PocoFoundation
-ext_libs       = v8 v8_libplatform v8_libbase
+target_extlibs = v8 v8_libplatform v8_libbase
 
 postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles Web.bndlspec
 
