--- a/protocols/Modbus/TCP/Makefile
+++ b/protocols/Modbus/TCP/Makefile
@@ -6,9 +6,8 @@
 # Makefile for macchina.io Modbus TCP bundle
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 INCLUDE += -I$(PROJECT_BASE)/protocols/Modbus/include
 
