cleaned up Makefiles

--- a/devices/Devices/testsuite/Makefile
+++ b/devices/Devices/testsuite/Makefile
@@ -6,15 +6,14 @@
 
 include $(POCO_BASE)/build/rules/global
 
-INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
-
 objects = \
 	EventModerationPolicyTest \
 	DevicesTestSuite \
 	Driver
 
-target         = testrunner
-target_version = 1
-target_libs    = IoTDevices PocoUtil PocoXML PocoJSON PocoFoundation CppUnit
+target          = testrunner
+target_version  = 1
+target_includes = $(PROJECT_BASE)/devices/Devices/include
+target_libs     = IoTDevices PocoUtil PocoXML PocoJSON PocoFoundation CppUnit
 
 include $(POCO_BASE)/build/rules/exec
