--- a/devices/SensorTag/Makefile
+++ b/devices/SensorTag/Makefile
@@ -5,18 +5,15 @@
 #
 
 include $(POCO_BASE)/build/rules/global
-
 include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
-INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
 objects = SensorTag SensorTagAccelerometer BundleActivator
 
-target         = io.macchina.sensortag
-target_version = 1
-target_libs    = IoTBtLE IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
+target          = io.macchina.sensortag
+target_includes = $(PROJECT_BASE)/devices/Devices/include \
+                  $(PROJECT_BASE)/protocols/BtLE/include
+target_libs     = IoTBtLE IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SensorTag.bndlspec
+postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles SensorTag.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
