--- a/protocols/Modbus/testsuite/Makefile
+++ b/protocols/Modbus/testsuite/Makefile
@@ -6,8 +6,6 @@
 
 include $(POCO_BASE)/build/rules/global
 
-INCLUDE += -I$(PROJECT_BASE)/protocols/Modbus/include
-
 objects = \
 	PDUWriterTest \
 	PDUReaderTest \
@@ -15,8 +13,9 @@ objects = \
 	ModbusTestSuite \
 	Driver
 
-target         = testrunner
-target_version = 1
-target_libs    = IoTModbus PocoUtil PocoXML PocoJSON PocoFoundation CppUnit
+target          = testrunner
+target_version  = 1
+target_includes = $(PROJECT_BASE)/protocols/Modbus/include
+target_libs     = IoTModbus PocoUtil PocoXML PocoJSON PocoFoundation CppUnit
 
 include $(POCO_BASE)/build/rules/exec
