--- a/devices/GNSS/Makefile
+++ b/devices/GNSS/Makefile
@@ -5,19 +5,16 @@
 #
 
 include $(POCO_BASE)/build/rules/global
-
 include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
-INCLUDE += -I$(PROJECT_BASE)/devices/GNSS/NMEA/include
-INCLUDE += -I$(PROJECT_BASE)/devices/Serial/include
 
 objects = GNSSSensorImpl BundleActivator
 
-target         = io.macchina.gnss.nmea
-target_version = 1
-target_libs    = IoTGNSSNMEA IoTDevices PocoSerial PocoGeo PocoOSP PocoUtil PocoXML PocoJSON PocoFoundation
+target          = io.macchina.gnss.nmea
+target_includes = $(PROJECT_BASE)/devices/Devices/include \
+                  $(PROJECT_BASE)/devices/GNSS/NMEA/include \
+                  $(PROJECT_BASE)/devices/Serial/include
+target_libs     = IoTGNSSNMEA IoTDevices PocoSerial PocoGeo PocoOSP PocoUtil PocoXML PocoJSON PocoFoundation
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles GNSS.bndlspec
+postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles GNSS.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
