--- a/devices/XBeeSensor/Makefile
+++ b/devices/XBeeSensor/Makefile
@@ -5,18 +5,15 @@
 #
 
 include $(POCO_BASE)/build/rules/global
-
 include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
-INCLUDE += -I$(PROJECT_BASE)/protocols/XBee/include
 
 objects = XBeeSensor BundleActivator
 
-target         = io.macchina.xbee.sensor
-target_version = 1
-target_libs    = IoTXBee IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
+target          = io.macchina.xbee.sensor
+target_includes = $(PROJECT_BASE)/devices/Devices/include \
+                  $(PROJECT_BASE)/protocols/XBee/include
+target_libs     = IoTXBee IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles XBeeSensor.bndlspec
+postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles XBeeSensor.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
