--- a/platform/RemotingNG/samples/TimeClientTCP/Makefile
+++ b/platform/RemotingNG/samples/TimeClientTCP/Makefile
@@ -6,13 +6,12 @@
 
 include $(POCO_BASE)/build/rules/global
 
-INCLUDE += -I../TimeServerTCP/include
-
 objects = ITimeService TimeClient TimeServiceClientHelper TimeServiceEventSubscriber \
 	TimeServiceProxy TimeServiceProxyFactory
 
-target         = TimeClient
-target_version = 1
-target_libs    = PocoRemotingNGTCP PocoRemotingNG PocoUtil PocoNet PocoXML PocoFoundation
+target          = TimeClient
+target_version  = 1
+target_includes = ../TimeServerTCP/include
+target_libs     = PocoRemotingNGTCP PocoRemotingNG PocoUtil PocoNet PocoXML PocoFoundation
 
 include $(POCO_BASE)/build/rules/exec
