--- a/protocols/BtLE/BlueZ/Makefile
+++ b/protocols/BtLE/BlueZ/Makefile
@@ -5,18 +5,15 @@
 #
 
 include $(POCO_BASE)/build/rules/global
-
 include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
 objects = BundleActivator \
 	BlueZGATTClient
 
-target         = io.macchina.btle.bluez
-target_version = 1
-target_libs    = IoTBtLE PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
+target          = io.macchina.btle.bluez
+target_includes = $(PROJECT_BASE)/protocols/BtLE/include
+target_libs     = IoTBtLE PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles BlueZ.bndlspec
+postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles BlueZ.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
