--- a/protocols/MQTT/Makefile-Bundle
+++ b/protocols/MQTT/Makefile-Bundle
@@ -5,17 +5,14 @@
 #
 
 include $(POCO_BASE)/build/rules/global
-
 include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-INCLUDE += -I$(PROJECT_BASE)/protocols/MQTT/Paho/include
 
 objects = MQTTClientImpl BundleActivator
 
-target         = io.macchina.mqtt.client
-target_version = 1
-target_libs    = IoTMQTT PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation PahoMQTT
+target          = io.macchina.mqtt.client
+target_includes = $(PROJECT_BASE)/protocols/MQTT/Paho/include
+target_libs     = IoTMQTT PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation PahoMQTT
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles MQTT.bndlspec
+postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles MQTT.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
