--- a/devices/Devices/Makefile-Library
+++ b/devices/Devices/Makefile-Library
@@ -13,6 +13,7 @@ objects = Device DeviceException \
 	DeviceServerHelper \
 	DeviceSkeleton \
 	DeviceException \
+	DeviceEventDispatcher \
 	Sensor \
 	ISensor \
 	SensorEventDispatcher \
@@ -84,6 +85,7 @@ objects = Device DeviceException \
 	LEDRemoteObject \
 	LEDServerHelper \
 	LEDSkeleton \
+	LEDEventDispatcher \
 	BarcodeReader \
 	IBarcodeReader \
 	BarcodeReaderEventDispatcher \
