disable devices/CAN

--- a/devices/Makefile
+++ b/devices/Makefile
@@ -18,4 +18,4 @@ clean all:
 	$(MAKE) -C SensorTag $(MAKECMDGOALS)
 	$(MAKE) -C GNSS/NMEA $(MAKECMDGOALS)
 	$(MAKE) -C GNSS $(MAKECMDGOALS)
-	$(MAKE) -C CAN $(MAKECMDGOALS)
+#	$(MAKE) -C CAN $(MAKECMDGOALS)
