fix units for simulation sensors

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -42,7 +42,7 @@ auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
 # After 100 cycles, the temperature will reset to the
 # starting value.
 simulation.sensors.temperature1.physicalQuantity = temperature
-simulation.sensors.temperature1.physicalUnit = °C
+simulation.sensors.temperature1.physicalUnit = Cel
 simulation.sensors.temperature1.initialValue = 20
 simulation.sensors.temperature1.delta = 0.2
 simulation.sensors.temperature1.cycles = 100
@@ -55,7 +55,7 @@ simulation.sensors.temperature1.mode = linear
 # After 100 cycles, the temperature will reset to the
 # starting value.
 simulation.sensors.temperature2.physicalQuantity = temperature
-simulation.sensors.temperature2.physicalUnit = °C
+simulation.sensors.temperature2.physicalUnit = Cel
 simulation.sensors.temperature2.initialValue = 25
 simulation.sensors.temperature2.delta = 0.5
 simulation.sensors.temperature2.cycles = 100
@@ -73,7 +73,7 @@ simulation.sensors.temperature2.mode = random
 
 # A humidity sensor that updates every 5 seconds.
 simulation.sensors.humidity1.physicalQuantity = humidity
-simulation.sensors.humidity1.physicalUnit = %RH
+simulation.sensors.humidity1.physicalUnit = %
 simulation.sensors.humidity1.initialValue = 40
 simulation.sensors.humidity1.delta = 0.5
 simulation.sensors.humidity1.cycles = 20
