Add GPIO configuration on properties
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -177,3 +177,11 @@ openSSL.client.verificationDepth = 9
 openSSL.client.loadDefaultCAFile = false
 openSSL.client.caConfig = ${application.configDir}rootcert.pem
 openSSL.client.invalidCertificateHandler.name = RejectCertificateHandler
+
+
+#
+# GPIO Configuration
+#
+#linux.gpio.enable = true
+#linux.gpio.pins.10.direction = out
+#linux.gpio.pins.11.direction = in
