--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 add_executable(macchina-launcher src/MacchinaLauncher.cpp)
 
-target_link_libraries(macchina-launcher PocoUtil PocoJSON PocoXML PocoFoundation)
+target_link_libraries(macchina-launcher Poco::Util Poco::JSON Poco::XML)
