--- a/platform/OSP/BundleCreator/CMakeLists.txt
+++ b/platform/OSP/BundleCreator/CMakeLists.txt
@@ -3,4 +3,4 @@ add_executable(bundle
     src/BundleCreator.cpp 
     src/ManifestInfo.cpp
 )
-target_link_libraries(bundle PocoFoundation PocoXML PocoUtil PocoOSP PocoZip)
+target_link_libraries(bundle Poco::OSP)
