--- a/platform/OSP/CodeCacheUtility/CMakeLists.txt
+++ b/platform/OSP/CodeCacheUtility/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_executable(ccutil 
     src/CCUtility.cpp
 )
-target_link_libraries(ccutil PocoOSP PocoZip PocoUtil PocoXML PocoFoundation)
+target_link_libraries(ccutil Poco::OSP)
