--- a/platform/OSP/samples/ServiceListener/CMakeLists.txt
+++ b/platform/OSP/samples/ServiceListener/CMakeLists.txt
@@ -3,6 +3,6 @@ find_package(MacchinaOSP)
  
 add_library(com.appinf.osp.samples.servicelistener SHARED src/ServiceListener.cpp)
 target_include_directories(com.appinf.osp.samples.servicelistener PUBLIC include)
-target_link_libraries(com.appinf.osp.samples.servicelistener PocoOSP PocoNet PocoUtil PocoXML PocoFoundation)
+target_link_libraries(com.appinf.osp.samples.servicelistener Poco::OSP)
  
 create_bundle(TARGET com.appinf.osp.samples.servicelistener SPEC_FILE ServiceListener.bndlspec)
