--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(macchina src/MacchinaServer.cpp)
 
-target_link_libraries(macchina PocoOSP PocoZip PocoUtil PocoJSON PocoXML PocoFoundation)
+target_link_libraries(macchina Poco::OSP)
 
 add_custom_command(TARGET macchina POST_BUILD 
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/macchina.properties.in ${CMAKE_BINARY_DIR}/macchina.properties
