--- a/platform/Serial/CMakeLists.txt
+++ b/platform/Serial/CMakeLists.txt
@@ -5,13 +5,15 @@ add_library(PocoSerial
     $<$<PLATFORM_ID:"Windows">:src/SerialPort_WIN32.cpp>
 )
 
-target_link_libraries(PocoSerial Foundation)
+target_link_libraries(PocoSerial Poco::Foundation)
 target_include_directories(PocoSerial
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
     )
+
+add_library(Poco::Serial ALIAS PocoSerial)
 
 if(BeagleBone)
     target_compile_definitions(PocoSerial PUBLIC POCO_SERIAL_ENABLE_BEAGLEBONE_RS485_HACK)    
