--- a/platform/OSP/BundleCreator/CMakeLists.txt
+++ b/platform/OSP/BundleCreator/CMakeLists.txt
@@ -4,3 +4,9 @@ add_executable(bundle
     src/ManifestInfo.cpp
 )
 target_link_libraries(bundle Poco::OSP)
+
+install(TARGETS bundle
+  EXPORT OSP
+  RUNTIME
+    DESTINATION bin/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}
+)
