--- a/platform/OSP/Web/CMakeLists.txt
+++ b/platform/OSP/Web/CMakeLists.txt
@@ -16,7 +16,13 @@ add_library(PocoOSPWeb SHARED
     src/WebFilterExtensionPoint.cpp
 )
 target_link_libraries(PocoOSPWeb  Poco::OSP)
-target_include_directories(PocoOSPWeb PUBLIC include)
+target_include_directories(PocoOSPWeb
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+  PRIVATE
+    src
+)
 add_library(Poco::OSP::Web ALIAS PocoOSPWeb)
 
 add_library(osp.web SHARED 
@@ -25,3 +31,11 @@ add_library(osp.web SHARED
 target_link_libraries(osp.web Poco::OSP::Web)
 
 create_bundle(TARGET osp.web SPEC_FILE WebBundle.bndlspec)
+
+install(TARGETS PocoOSPWeb
+  EXPORT Web
+  LIBRARY
+    DESTINATION lib/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}
+  PUBLIC_HEADER
+    DESTINATION include
+)
