--- a/platform/OSP/Web/CMakeLists.txt
+++ b/platform/OSP/Web/CMakeLists.txt
@@ -1,7 +1,7 @@
  
 find_package(MacchinaOSP)
 
-add_library(PocoOSPWeb SHARED 
+add_library(Web SHARED
     src/MediaTypeMapper.cpp 
     src/WebServerDispatcher.cpp
     src/WebServerRequestHandlerFactory.cpp
@@ -15,8 +15,8 @@ add_library(PocoOSPWeb SHARED
     src/WebFilterFactory.cpp
     src/WebFilterExtensionPoint.cpp
 )
-target_link_libraries(PocoOSPWeb  Poco::OSP)
-target_include_directories(PocoOSPWeb
+target_link_libraries(Web  Poco::OSP)
+target_include_directories(Web
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
@@ -25,7 +25,7 @@ target_include_directories(PocoOSPWeb
 )
 install(DIRECTORY include/ DESTINATION include)
 
-add_library(Poco::OSP::Web ALIAS PocoOSPWeb)
+add_library(Poco::OSP::Web ALIAS Web)
 
 add_library(osp.web SHARED 
     src/WebBundleActivator.cpp
@@ -34,7 +34,7 @@ target_link_libraries(osp.web Poco::OSP::Web)
 
 create_bundle(TARGET osp.web SPEC_FILE WebBundle.bndlspec)
 
-install(TARGETS PocoOSPWeb
+install(TARGETS Web
   EXPORT Web
   LIBRARY
     DESTINATION lib/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}
